--- a/pages/explore.html
+++ b/pages/explore.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Explore Articles — Thinking Palace</title>
-  <link rel="stylesheet" href="css/styles_1.css" />
-  <link rel="stylesheet" href="css/styles_2.css" />
+  <link rel="stylesheet" href="../css/styles_1.css" />
+  <link rel="stylesheet" href="../css/styles_2.css" />
 </head>
 <body class="bg-black text-white font-ocean">
   <main class="min-h-screen overflow-y-auto bg-gradient-to-b from-gray-900 via-black to-gray-900 scrollbar-hide">
