--- a/index.html
+++ b/index.html
@@ -44,12 +44,33 @@
 
                 <!-- Navigation Links -->
                 <nav id="navbar-collapse"
-                    class="hs-collapse hidden sm:flex space-x-6 items-center transition-all duration-300">
-                    <a href="/" class="hover:text-blue-500 transition">Home</a>
-                    <a href="#articles" class="hover:text-blue-500 transition">Articles</a>
-                    <a href="#about" class="hover:text-blue-500 transition">About</a>
-                    <a href="#contact" class="hover:text-blue-500 transition">Contact</a>
+                    class="hs-collapse hidden sm:flex items-center space-x-8 transition-all duration-300 text-sm md:text-base font-medium">
+                    <a href="/"
+                        class="relative inline-block text-white hover:text-blue-400 transition duration-300 group">
+                        Home
+                        <span
+                            class="absolute left-0 -bottom-1 w-0 h-0.5 bg-blue-400 transition-all group-hover:w-full"></span>
+                    </a>
+                    <a href="#articles"
+                        class="relative inline-block text-white hover:text-blue-400 transition duration-300 group">
+                        Articles
+                        <span
+                            class="absolute left-0 -bottom-1 w-0 h-0.5 bg-blue-400 transition-all group-hover:w-full"></span>
+                    </a>
+                    <a href="#about"
+                        class="relative inline-block text-white hover:text-blue-400 transition duration-300 group">
+                        About
+                        <span
+                            class="absolute left-0 -bottom-1 w-0 h-0.5 bg-blue-400 transition-all group-hover:w-full"></span>
+                    </a>
+                    <a href="#contact"
+                        class="relative inline-block text-white hover:text-blue-400 transition duration-300 group">
+                        Contact
+                        <span
+                            class="absolute left-0 -bottom-1 w-0 h-0.5 bg-blue-400 transition-all group-hover:w-full"></span>
+                    </a>
                 </nav>
+
             </div>
         </header>
         <div>
@@ -113,7 +134,8 @@
                                     <div id="tabs-with-card-1" class="tabpanel" aria-labelledby="tabs-with-card-item-1">
                                         <img class="shadow-xl shadow-gray-800 max-h-[550px] rounded-xl dark:shadow-gray-900/[.2]"
                                             src="https://images.pexels.com/photos/7722921/pexels-photo-7722921.jpeg"
-                                            alt="Image Description"></div>
+                                            alt="Image Description">
+                                    </div>
                                 </div>
                             </div>
                         </div>
