Add improvements on the thinking palace website

--- a/pages/article-prime.html
+++ b/pages/article-prime.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thinking Palace — Prime Numbers</title>
-    <link rel="stylesheet" href="../css/styles_1.css" />
-    <link rel="stylesheet" href="../css/styles_2.css" />
-    <link rel="stylesheet" href="../css/styles-upgrade.css" />
-    <link rel="stylesheet" href="../css/article.css" />
+    <link rel="stylesheet" href="../static/css/styles_1.css" />
+    <link rel="stylesheet" href="../static/css/styles_2.css" />
+    <link rel="stylesheet" href="../static/css/styles-upgrade.css" />
+    <link rel="stylesheet" href="../static/css/article.css" />
 </head>
 
 <body class="bg-black text-white font-ocean">
@@ -20,8 +20,8 @@
                 Thinking Palace
             </a>
             <nav id="navbar-collapse" class="hidden sm:flex space-x-6 items-center text-sm">
-                <a href="/" class="hover:text-blue-500 transition">Home</a>
-                <a href="/pages/explore.html" class="hover:text-blue-500 transition">Articles</a>
+                <a href="/thinking_palace" class="hover:text-blue-500 transition">Home</a>
+                <a href="/thinking_palace/pages/explore.html" class="hover:text-blue-500 transition">Articles</a>
                 <a href="#about" class="hover:text-blue-500 transition">About</a>
                 <a href="#contact" class="hover:text-blue-500 transition">Contact</a>
             </nav>
@@ -141,9 +141,10 @@
 
     <!-- Footer -->
     <footer class="bg-black border-t border-gray-700 p-8 text-center text-gray-500 text-sm">
-        Created by Raymond Martin ·
-        <a href="https://github.com/anxielray" class="text-blue-400 hover:underline">GitHub</a> ·
-        <a href="https://martinraymondogwel.netlify.app" class="text-blue-400 hover:underline">Portfolio</a>
+        Created by Raymond Martin · <a class="text-blue-500 hover:underline"
+            href="https://github.com/anxielray">GitHub</a> ·
+        <a class="text-blue-500 hover:underline" href="https://martinraymondogwel.netlify.app">Portfolio</a> ·
+        <a class="text-blue-500 hover:underline" href="www.linkedin.com/in/raymond-ogwel">LinkedIn</a>
     </footer>
 </body>
 
