--- a/pages/pascals.html
+++ b/pages/pascals.html
@@ -88,9 +88,10 @@
 
     <!-- Footer -->
     <footer class="bg-black border-t border-gray-700 p-8 text-center text-gray-500 text-sm">
-        Created by Raymond Martin ·
-        <a href="https://github.com/anxielray" class="text-blue-400 hover:underline">GitHub</a> ·
-        <a href="https://martinraymondogwel.netlify.app" class="text-blue-400 hover:underline">Portfolio</a>
+        Created by Raymond Martin · <a class="text-blue-500 hover:underline"
+            href="https://github.com/anxielray">GitHub</a> ·
+        <a class="text-blue-500 hover:underline" href="https://martinraymondogwel.netlify.app">Portfolio</a> ·
+        <a class="text-blue-500 hover:underline" href="www.linkedin.com/in/raymond-ogwel">LinkedIn</a>
     </footer>
 </body>
 
