--- a/pages/article.html
+++ b/pages/article.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thinking Palace — Article</title>
-    <link rel="stylesheet" href="../css/styles_1.css" />
-    <link rel="stylesheet" href="../css/styles_2.css" />
-    <link rel="stylesheet" href="../css/styles-upgrade.css" />
-    <link rel="stylesheet" href="../css/article.css" />
+    <link rel="stylesheet" href="../static/css/styles_1.css" />
+    <link rel="stylesheet" href="../static/css/styles_2.css" />
+    <link rel="stylesheet" href="../static/css/styles-upgrade.css" />
+    <link rel="stylesheet" href="../static/css/article.css" />
 </head>
 
 <body class="bg-black text-white font-ocean">
@@ -90,7 +90,7 @@
         </p>
 
         <div class="mt-12 text-center">
-            <a href="/pages/explore.html" class="button">← Back to Articles</a>
+            <a href="/thinking_palace/pages/explore.html" class="button">← Back to Articles</a>
         </div>
     </article>
 
