Add improvements on the thinking palace website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="static/css/styles_1.css" data-precedence="next">
     <link rel="stylesheet" href="static/css/styles_2.css" data-precedence="next">
     <link rel="stylesheet" href="static/css/upgrade.css" data-precedence="next">
-    <script type="text/javasrctipt" src="static/js/router.js"></script>
+    <script type="text/javascript" src="static/js/router.js"></script>
     <meta charset="utf-8">
     <title>Thinking Palace</title>
     <meta name="description"
@@ -46,11 +46,11 @@
                 <!-- Navigation Links -->
                 <nav id="navbar-collapse">
                     <a href="/thinking_palace/" onclick="navigateTo('/thinking_palace/'); return false;">Home</a>
-                    <a href="/thinking_palace/articles"
+                    <a href="/thinking_palace/pages/explore.html"
                         onclick="navigateTo('/thinking_palace/articles'); return false;">Articles</a>
-                    <a href="/thinking_palace/about"
+                    <a href="/thinking_palace/pages/about.html"
                         onclick="navigateTo('/thinking_palace/about'); return false;">About</a>
-                    <a href="/thinking_palace/contact"
+                    <a href="/thinking_palace/pages/contact.html"
                         onclick="navigateTo('/thinking_palace/contact'); return false;">Contact</a>
                 </nav>
             </div>
@@ -79,7 +79,7 @@
                         </div>
 
                         <div class="flex justify-center md:justify-start">
-                            <a href="/thinking_palace/articles"
+                            <a href="/thinking_palace/pages/explore.html"
                                 class="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white text-lg font-semibold rounded-md shadow-md hover:shadow-xl transition-all duration-300 transform hover:scale-105">
                                 📚 Explore Articles
                             </a>
