--- a/pages/explore.html
+++ b/pages/explore.html
@@ -27,6 +27,13 @@
     <section id="articles-container" class="max-w-screen-2xl mx-auto px-6 pb-24 grid gap-12 md:grid-cols-2 lg:grid-cols-3">
       <!-- Articles will be injected here by JS -->
     </section>
+    <div class="text-center mt-6 mb-6">
+      <a href="/thinking_palace"
+         class="inline-block px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded-full hover:bg-blue-700 transition duration-300">
+        ← Back to Home
+      </a>
+    </div>
+    
 
     <!-- Footer -->
     <footer class="bg-black border-t border-gray-700 p-8 text-center text-gray-500 text-sm">
