Add proper link to the prime pages

--- a/pages/pascals.html
+++ b/pages/pascals.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thinking Palace — Pascal's Triangle</title>
-    <link rel="stylesheet" href="../css/styles_1.css" />
-    <link rel="stylesheet" href="css/upgrade.css" data-precedence="next">
-    <link rel="stylesheet" href="../css/styles_2.css" />
-    <link rel="stylesheet" href="../css/article.css" />
+    <link rel="stylesheet" href="../static/css/styles_1.css" />
+    <link rel="stylesheet" href="../static/css/upgrade.css">
+    <link rel="stylesheet" href="../static//css/styles_2.css" />
+    <link rel="stylesheet" href="../static/css/article.css" />
 
 </head>
 
