Add favicons to the website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="static/css/styles_2.css" data-precedence="next">
     <link rel="stylesheet" href="static/css/upgrade.css" data-precedence="next">
     <script type="text/javascript" src="static/js/router.js"></script>
+    <link rel="icon" href="static/img/nerdy-T2.png" type="image/png">
     <meta charset="utf-8">
     <title>Thinking Palace</title>
     <meta name="description"
