--- a/pages/pascals.html
+++ b/pages/pascals.html
@@ -82,7 +82,7 @@
         </p>
 
         <div class="mt-12 text-center">
-            <a href="/pages/explore.html" class="button">← Back to Articles</a>
+            <a href="/thinking_palace/pages/explore.html" class="button">← Back to Articles</a>
         </div>
     </article>
 
