--- a/pages/math.html
+++ b/pages/math.html
@@ -15,7 +15,7 @@
         <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-blue-400">Mathematics</h1>
             <nav class="space-x-6 text-gray-300">
-                <a href="/index.html" class="hover:text-blue-400">Home</a>
+                <a href="/" class="hover:text-blue-400">Home</a>
                 <a href="#why" class="hover:text-blue-400">Why I Love Math</a>
             </nav>
         </div>
