--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             <h2 class="text-3xl font-bold text-white mb-6">Get in Touch</h2>
             <p class="text-gray-300 mb-6">Want to collaborate or learn more about my research? Let’s connect.</p>
             <div class="flex justify-center gap-6">
-                <button onclick="copyToClipboard('raymond.email@example.com')"
+                <button onclick="copyToClipboard('reimundjapprends@gmail.com')"
                     class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-md text-white text-sm">📧 Copy Email</button>
-                <button onclick="copyToClipboard('+254700000000')"
+                <button onclick="copyToClipboard('+254111801110')"
                     class="px-4 py-2 bg-green-600 hover:bg-green-700 rounded-md text-white text-sm">💬 Copy
                     WhatsApp</button>
             </div>
