feat(update): Update the url to the unfinished pages that are under development

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <li>• Fundamental forces studies</li>
                         <li>• Original thought experiments</li>
                     </ul>
-                    <a href="#science" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
+                    <a href="pages/development.html" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
                         details →</a>
                 </div>
 
@@ -83,7 +83,7 @@
                         <li>• OnlyPopcorn (React)</li>
                         <li>• GraphQL Profile Page</li>
                     </ul>
-                    <a href="#programming"
+                    <a href="pages/development.html"
                         class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View details →</a>
                 </div>
 
@@ -96,7 +96,7 @@
                         <li>• Applications of math & physics</li>
                         <li>• Philosophical explorations</li>
                     </ul>
-                    <a href="#articles" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
+                    <a href="pages/development.html" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
                         details →</a>
                 </div>
             </div>
