chore(update): Update the url to the articles page and add the actual article page and link accordingly to the rest of the application.:

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <li>• Applications of math & physics</li>
                         <li>• Philosophical explorations</li>
                     </ul>
-                    <a href="pages/development.html" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
+                    <a href="pages/articles.html" class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View
                         details →</a>
                 </div>
             </div>
