--- a/pages/development.html
+++ b/pages/development.html
@@ -1,52 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Under Development</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Courier New', monospace;
-      background-color: #0d1117;
-      color: #c9d1d9;
-    }
-    .container {
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: #58a6ff;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .spinner {
-      border: 6px solid #30363d;
-      border-top: 6px solid #58a6ff;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      margin: auto;
-      animation: spin 1.5s linear infinite;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Under Development</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Courier New', monospace;
+            background-color: #0d1117;
+            color: #c9d1d9;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #58a6ff;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .spinner {
+            border: 6px solid #30363d;
+            border-top: 6px solid #58a6ff;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin: auto;
+            animation: spin 1.5s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Back Home Button */
+        .back-home {
+            display: inline-block;
+            margin-top: 2rem;
+            padding: 0.7rem 1.4rem;
+            background-color: #21262d;
+            border: 1px solid #30363d;
+            border-radius: 8px;
+            color: #58a6ff;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .back-home:hover {
+            background-color: #58a6ff;
+            color: #0d1117;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 10px rgba(88, 166, 255, 0.4);
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container">
-    <h1>🚧 Page Under Development 🚧</h1>
-    <p>I’m currently building this section. Check back soon for updates!</p>
-    <div class="spinner"></div>
-  </div>
+    <div class="container">
+        <h1>🚧 Page Under Development 🚧</h1>
+        <p>I’m currently building this section. Check back soon for updates!</p>
+        <div class="spinner"></div>
+        <br>
+        <div style="text-align:center;">
+            <a class="back-home" href="/">⬅ Back to Home</a>
+        </div>
+    </div>
 </body>
+
 </html>
