chore(update): Update the url to match the website one

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -144,7 +144,7 @@
     </div>
 
     <div style="text-align:center;">
-      <a class="back-home" href="/">⬅ Back to Home</a>
+      <a class="back-home" href="/thinking_palace">⬅ Back to Home</a>
     </div>
   </div>
 
