--- a/pages/development.html
+++ b/pages/development.html
@@ -82,7 +82,7 @@
         <div class="spinner"></div>
         <br>
         <div style="text-align:center;">
-            <a class="back-home" href="/">⬅ Back to Home</a>
+            <a class="back-home" href="/thinking_palace">⬅ Back to Home</a>
         </div>
     </div>
 </body>
