feat(add): Add the programming page wth some programmes in code

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li>• OnlyPopcorn (React)</li>
                         <li>• GraphQL Profile Page</li>
                     </ul>
-                    <a href="pages/development.html"
+                    <a href="pages/programming.html"
                         class="text-blue-400 text-sm font-mono hover:underline mt-3 inline-block">View details →</a>
                 </div>
 
