feat(add): Add a new card for a programme to the page

--- a/pages/programming.html
+++ b/pages/programming.html
@@ -136,7 +136,9 @@
 
     <div class="container">
         <div class="intro">
-            <p>I code because programming lets me bring the logic of mathematics and the curiosity of science to life — turning abstract ideas into systems, simulations, and tools that push the boundaries of what’s possible.</p>
+            <p>I code because programming lets me bring the logic of mathematics and the curiosity of science to life —
+                turning abstract ideas into systems, simulations, and tools that push the boundaries of what’s possible.
+            </p>
         </div>
 
         <!-- Cards -->
@@ -221,7 +223,8 @@
                 algorithmic statistics by modeling relationships between variables and
                 quantifying their strength with precision up to 10 decimal places.
             </p>
-            <a href="https://github.com/anxielray/Linear-Regression_Correlation-coefficient" target="_blank">View Repository</a>
+            <a href="https://github.com/anxielray/Linear-Regression_Correlation-coefficient" target="_blank">View
+                Repository</a>
         </div>
 
         <div class="card">
@@ -313,6 +316,15 @@
             </a>
         </div>
 
+        <div class="card">
+            <h3 class="text-xl font-semibold mb-2">🎬 OnlyPopcorn</h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm mb-3">
+                OnlyPopcorn is a modern web-based movie and TV show discovery app built with JavaScript. It allows users
+                to search for titles, view detailed information, manage a personal watchlist, and explore trending
+                content using TMDB and OMDB APIs.
+            </p>
+            <a href="https://github.com/anxielray/OnlyPopcorn" target="_blank">View Repository</a>
+        </div>
 
 
         <!-- Back Home Button -->
@@ -322,10 +334,10 @@
     </div>
 
     <!-- Footer -->
-   <footer>
-    <p>&copy; 2025 Raymond Martin | Built with 💡 and Curiosity</p>
-    <p>Physicist | Mathematician | Scientist</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Raymond Martin | Built with 💡 and Curiosity</p>
+        <p>Physicist | Mathematician | Scientist</p>
+    </footer>
 </body>
 
 </html>
