feat(add): Add a new card for a programme to the page

--- a/pages/programming.html
+++ b/pages/programming.html
@@ -145,7 +145,73 @@
         <!-- Programming / GitHub Projects Section Cards -->
 
         <div class="card">
-            <h2>CS50_AI_Python</h2>
+            <h2>Push-Swap</h2>
+            <p>
+                A challenging algorithmic project in <strong>Go</strong> that sorts integers
+                using only predefined stack operations. It requires implementing two programs:
+                <em>Push-Swap</em>, which generates the shortest sequence of instructions to
+                sort a stack, and <em>Checker</em>, which validates the correctness of the sequence.
+                The project highlights mastery of data structures, optimization, and efficient sorting logic.
+            </p>
+            <a href="https://github.com/anxielray/push-swap" target="_blank">View Repository</a>
+        </div>
+
+        <div class="card">
+            <h2 class="text-xl font-semibold mb-2">Chemistry Substances Explorer</h2>
+            <p class="text-gray-600 dark:text-gray-300 text-sm mb-3">
+                A React-based application for exploring chemical substances in foods. It provides detailed views with
+                formulas, molar masses, states, uses, and hazards, helping users manage diets and understand chemistry
+                in everyday life.
+            </p>
+            <a href="https://github.com/anxielray/Chemistry-substances">View Repository</a>
+        </div>
+
+        <div class="card">
+            <h2>ATM</h2>
+            <p>
+                A <strong>C-based CLI banking system simulator</strong> that mimics the
+                core functionalities of an Automated Teller Machine. Users can create
+                accounts, check balances, deposit, and withdraw funds through a secure,
+                text-based interface. A project designed to strengthen systems
+                programming and command-line interaction skills.
+            </p>
+            <a href="https://github.com/anxielray/ATM" target="_blank">
+                View Project
+            </a>
+        </div>
+
+        <div class="card">
+            <h2>Real-time Forum</h2>
+            <p>
+                A <strong>modern forum application</strong> built with Go, WebSockets, and SQLite3.
+                It features <em>real-time messaging, user authentication, story sharing, post
+                    interactions, friend requests,</em> and a sleek <strong>dark-themed UI</strong>.
+                Designed with scalability and developer-friendliness in mind, it demonstrates
+                backend mastery and real-time web integration.
+            </p>
+            <ul>
+                <li>⚡ WebSocket-powered real-time updates</li>
+                <li>🔑 User registration & authentication</li>
+                <li>📝 Post creation, replies, comments, and notifications</li>
+                <li>🎨 Modern dark UI with Go templates</li>
+            </ul>
+            <a href="https://github.com/Wendy-Tabitha/SocialSculpt" target="_blank">
+                View Project
+            </a>
+        </div>
+
+        <div class="card">
+            <h3 class="text-xl font-semibold mb-2">🎬 OnlyPopcorn</h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm mb-3">
+                OnlyPopcorn is a modern web-based movie and TV show discovery app built with JavaScript. It allows users
+                to search for titles, view detailed information, manage a personal watchlist, and explore trending
+                content using TMDB and OMDB APIs.
+            </p>
+            <a href="https://github.com/anxielray/OnlyPopcorn" target="_blank">View Repository</a>
+        </div>
+
+        <div class="card">
+            <h2>CS50 AI Python</h2>
             <p>
                 Coursework from Harvard’s CS50 Artificial Intelligence with Python. Includes assignments and projects
                 building AI agents, problem solving, and implementations with Python.
@@ -154,7 +220,7 @@
         </div>
 
         <div class="card">
-            <h2>Rubik_cube</h2>
+            <h2>Rubiks cube Solver</h2>
             <p>
                 Code to solve the Rubik’s Cube, implemented in Golang. Demonstrates algorithm design, search
                 / optimization, and handling state spaces.
@@ -228,18 +294,6 @@
         </div>
 
         <div class="card">
-            <h2>Push-Swap</h2>
-            <p>
-                A challenging algorithmic project in <strong>Go</strong> that sorts integers
-                using only predefined stack operations. It requires implementing two programs:
-                <em>Push-Swap</em>, which generates the shortest sequence of instructions to
-                sort a stack, and <em>Checker</em>, which validates the correctness of the sequence.
-                The project highlights mastery of data structures, optimization, and efficient sorting logic.
-            </p>
-            <a href="https://github.com/anxielray/push-swap" target="_blank">View Repository</a>
-        </div>
-
-        <div class="card">
             <h2>Impossible Game Series</h2>
             <p>
                 This project is based on an original mathematical discovery I call
@@ -280,50 +334,6 @@
             <a href="https://github.com/anxielray/Rust-Drawing" target="_blank">
                 View Project
             </a>
-        </div>
-
-        <div class="card">
-            <h2>ATM</h2>
-            <p>
-                A <strong>C-based CLI banking system simulator</strong> that mimics the
-                core functionalities of an Automated Teller Machine. Users can create
-                accounts, check balances, deposit, and withdraw funds through a secure,
-                text-based interface. A project designed to strengthen systems
-                programming and command-line interaction skills.
-            </p>
-            <a href="https://github.com/anxielray/ATM" target="_blank">
-                View Project
-            </a>
-        </div>
-
-        <div class="card">
-            <h2>Real-time Forum</h2>
-            <p>
-                A <strong>modern forum application</strong> built with Go, WebSockets, and SQLite3.
-                It features <em>real-time messaging, user authentication, story sharing, post
-                    interactions, friend requests,</em> and a sleek <strong>dark-themed UI</strong>.
-                Designed with scalability and developer-friendliness in mind, it demonstrates
-                backend mastery and real-time web integration.
-            </p>
-            <ul>
-                <li>⚡ WebSocket-powered real-time updates</li>
-                <li>🔑 User registration & authentication</li>
-                <li>📝 Post creation, replies, comments, and notifications</li>
-                <li>🎨 Modern dark UI with Go templates</li>
-            </ul>
-            <a href="https://github.com/Wendy-Tabitha/SocialSculpt" target="_blank">
-                View Project
-            </a>
-        </div>
-
-        <div class="card">
-            <h3 class="text-xl font-semibold mb-2">🎬 OnlyPopcorn</h3>
-            <p class="text-gray-600 dark:text-gray-300 text-sm mb-3">
-                OnlyPopcorn is a modern web-based movie and TV show discovery app built with JavaScript. It allows users
-                to search for titles, view detailed information, manage a personal watchlist, and explore trending
-                content using TMDB and OMDB APIs.
-            </p>
-            <a href="https://github.com/anxielray/OnlyPopcorn" target="_blank">View Repository</a>
         </div>
 
 
